Neues Scratch Material
Die Quelle https://www.youtube.com/channel/UCNc2uw7INArwMLD1AJ4oGnQ wurde unter Scratch > Tutorials hinzugefügt

--- a/material.html
+++ b/material.html
@@ -148,7 +148,6 @@
                             </li>
                             <li>Einfache Scratch-Projekte auf der
                                 <a href="https://scratch.mit.edu/starter_projects/">Scratch-Webseite</a>
-
                         </ul>
                     </p>
                     <h3>Tutorials</h3>
@@ -167,6 +166,10 @@
                         <li>
                             Ein Tutorial über Scrolling wie bei Super Mario:
                             <a href="https://scratch.mit.edu/projects/69082160/">https://scratch.mit.edu/projects/69082160/</a>
+                        </li>
+                        <li>
+                                Eine Sammlung von Video-Tutorials im Aufbau:
+                                <a href="https://www.youtube.com/channel/UCNc2uw7INArwMLD1AJ4oGnQ">"Der Scratch-Kanal" auf YouTube</a>
                         </li>
                     </ul>
                 </p>
