--- a/index.html
+++ b/index.html
@@ -206,12 +206,6 @@
                     </div>
 
                     <div class="row timeline-movement">
-                        <div class="timeline-badge timeline-filter-movement">
-                            <span class="glyphicon glyphicon-time"></span>
-                        </div>
-                    </div>
-
-                    <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
                                 <span class="timeline-balloon-date-day">03</span>
@@ -226,6 +220,12 @@
                     </div>
 
                     <div class="row timeline-movement">
+                        <div class="timeline-badge timeline-filter-movement">
+                            <span class="glyphicon glyphicon-time"></span>
+                        </div>
+                    </div>
+
+                    <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
                                 <span class="timeline-balloon-date-day">17</span>
@@ -237,6 +237,48 @@
                                                                                                 class="page-scroll">Seminarraum
                             236</a></div>
                         <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>16:30 - 18:30</div>
+                    </div>
+
+                    <div class="row timeline-movement">
+                        <a class="page-scroll" href="#join">
+                            <div class="timeline-badge">
+                                <span class="timeline-balloon-date-day">31</span>
+                                <span class="timeline-balloon-date-month">JULI</span>
+                            </div>
+                        </a>
+
+                        <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a href="#map"
+                                                                                                class="page-scroll">Seminarraum
+                            236</a></div>
+                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>15:30 - 18:30</div>
+                    </div>
+
+                    <div class="row timeline-movement">
+                        <a class="page-scroll" href="#join">
+                            <div class="timeline-badge">
+                                <span class="timeline-balloon-date-day">21</span>
+                                <span class="timeline-balloon-date-month">AUG</span>
+                            </div>
+                        </a>
+
+                        <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a href="#map"
+                                                                                                class="page-scroll">Seminarraum
+                            236</a></div>
+                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>15:30 - 18:30</div>
+                    </div>
+
+                    <div class="row timeline-movement">
+                        <a class="page-scroll" href="#join">
+                            <div class="timeline-badge">
+                                <span class="timeline-balloon-date-day">11</span>
+                                <span class="timeline-balloon-date-month">SEP</span>
+                            </div>
+                        </a>
+
+                        <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a href="#map"
+                                                                                                class="page-scroll">Seminarraum
+                            236</a></div>
+                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>15:30 - 18:30</div>
                     </div>
 
                     <div class="row timeline-row-future">
