--- a/material.html
+++ b/material.html
@@ -198,13 +198,28 @@
                         <a href="http://python.org">Python</a> kann direkt von der Webseite heruntergeladen und installiert werden. Eine Installationsanleitung für Windows von uns kann <a href="https://raw.githubusercontent.com/coderdojoka/Materialien/master/Installation/installation_python.pdf">hier</a>                        gefunden werden. Bei der Installation ist es wichtig darauf zu achten, dass Python zum Windows-Systempfad hinzugefügt wird (dies wird auch in der Anleitung beschrieben), da dies die Dinge später erleichert.
                     </p>
 
+                    <h3>Nützliche Links</h3>
+
+                    <p>
+                        <ul>
+                            <li>Python Tutorial:
+                                <a href="http://py-tutorial-de.readthedocs.org/de/python-3.3/">Übersetzung des Python 3 Tutorials</a>
+                            </li>
+                            <li>Python Tutorial:
+                                <a href="http://www.python-kurs.eu/python3_kurs.php">Python 3 Einführung (Menü links beachten)</a>
+                            </li>
+                            <li>Tkinter Tutorial
+                                <a href="http://www.python-kurs.eu/python_tkinter.php">Tkinter Tutorial (Menü links beachten)</a>
+                            </li>
+                        </ul>
+                    </p>
+
                     <h3>Befehlsübersicht:</h3>
 
                     <p>
                         Wir sind dabei eine <a href="https://raw.githubusercontent.com/coderdojoka/Materialien/master/Python/Befehlsübersicht/Übersicht.pdf">Befehlsreferenz</a> zu erstellen, diese soll als Nachschlagwerk dienen, in der die wichtigsten
                         Begriffe und Konstrukte aufgeführt sind.
                     </p>
-
 
                     <div>
                         <h2>Python Stufen</h2>
