Füge Unterstützer hinzu
This closes #11

--- a/index.html
+++ b/index.html
@@ -420,6 +420,21 @@
 <div id="map">
 </div>
 
+<!-- Sponsor Section -->
+<section id="sponsor" class="content-section text-center">
+    <div class="container">
+        <div class="row">
+		<h2>Unterstützer</h2>
+			<div class="col-lg-4 col-lg-offset-2">
+                <a href="http://www.kit.edu/"><img src="img/kit.png" alt="KIT" style="height: 120px; padding-top: 30px;"></a>
+            </div>
+            <div class="col-lg-4">
+                <a href="https://www.inovex.de/"><img src="img/inovex.png" alt="Inovex" style="height: 150px;"></a>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- Footer -->
 <footer>
     <div class="container text-center">
