Bilder angepasst, da viel zu groß und Namneschilder übermalt.

--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
                 </a>
 
 
-                <p>Um uns die Planung der Treffen zu erleichtern, sollte sich jeder, der teilnehmen will, vorher bei uns per
-                    <a href="mailto:coderdojo.karlsruhe@gmail.com">Mail</a> anmelden. Wenn ihr das erste Mal kommt, ist es
+                <p>Um uns die Planung der Treffen zu erleichtern, sollte sich jeder, der teilnehmen will, vorher bei uns per Mail unter
+                    <a href="mailto:coderdojo.karlsruhe@gmail.com">coderdojo.karlsruhe@gmail.com</a> anmelden. Wenn ihr das erste Mal kommt, ist es
                     auch gut für uns vorher zu wissen, wie alt ihr seit und was für Vorkentnisse ihr mitbringt.</p>
 
                 <p>Vor allem jüngere Kinder (bis ca. 12 Jahre) müssen von ihren Eltern zu diesen Treffen begleitet werden.
