Texte auf der Webseite verbessert (Danke Rebekka)

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
                     <h2 class="brand-heading">Karlsruhe</h2>
 
-                    <p class="intro-text">Dies ist die Website des CoderDojo Karlsruhe. Hier werden Informationen
-                        bezüglich der Treffen bereitgestellt.</p>
+                    <p class="intro-text">Herzlich willkommen auf der Webseite des CoderDojo Karlsruhe! 
+Hier findet ihr aktuelle Informationen zu unseren Treffen.</p>
                     <a href="#about" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated"></i>
                     </a>
@@ -142,32 +142,20 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Was ist ein CoderDojo?</h2>
 
-                <p>CoderDojo ist eine weltweit verbreitete gemeinnützige Organisation, deren Ziel es ist Kindern und
-                    Jugendlichen Computer, Technik und besonders Programmieren näher zu bringen. Die Webseite dazu ist <a
-                            href=https://coderdojo.com/>hier</a> zu finden.</p>
+                <p>CoderDojo ist eine weltweit verbreitete gemeinnützige Organisation, deren Ziel es ist, Kindern und Jugendlichen Computer, Technik und vor allem das Programmieren näherzubringen. Die internationale Webseite findet ihr <a href="https://coderdojo.com/">hier</a>.</p>
 
 
                 <h2>Warum CoderDojo?</h2>
 
 
-                <p>Programmieren zu können ist eine Fähigkeit, die heutzutage immer wichtiger wird. Wie mit den meisten
-                    Fähigkeiten ist es am besten Programmieren schon in frühen Jahren zu lernen.
-                    Leider ist Programmieren noch kein fester Bestandteil im Schulalltag der Kinder.
-                    <a href="img/codo/bild_1.jpg"  data-lightbox="codo-bilder" data-title="Mit zweiter Tastatur gehts besser!">
+                <p>Programmieren zu können ist eine Fähigkeit, die heutzutage immer wichtiger wird. Wie bei vielen Fähigkeiten gilt auch hier: je früher mit dem Erlernen begonnen wird, desto besser. Leider ist das Programmieren noch kein fester Bestandteil im Schulalltag der Kinder. Dadurch entstand unsere Vision, ein CoderDojo in Karlsruhe einzurichten, um interessierten Kindern die Möglichkeit zu geben, programmieren zu lernen und sie in diesem Bereich zu fördern.                    </p>
+<a href="img/codo/bild_1.jpg"  data-lightbox="codo-bilder" data-title="Mit zweiter Tastatur gehts besser!">
                         <img class="img-thumbnail rechts_400" src="img/codo/bild_1.jpg" alt=""/>
                     </a>
 
-                    Wir wollen deshalb ein CoderDojo in Karlsruhe
-                    einrichten, um interessierten Kindern die Möglichkeit zu geben Programmieren zu lernen. In Deutschland
-                    gibt es derzeit schon ein paar CoderDojos, das uns am nächsten gelegene ist in <a
-                            href=https://coderdojohd.github.io>Heidelberg</a>.</p>
-
                 <h2>Wie funktioniert's?</h2>
 
-                <p>Es finden alle ein bis zwei Wochen Treffen statt. Die Kinder und Jugendlichen treffen sich mit den
-                    freiwilligen Mentoren aus technischen Bereichen bzw. Studenten, um zusammen zu programmieren und unter
-                    Anleitung ihre Fähigkeiten zu entwickeln und auszubauen. Alle in diesem Projekt mitwirkenden Mentoren
-                    engagieren sich ehrenamtlich und die Treffen sollen auch für alle Kinder kostenlos sein.</p>
+                <p>Unsere Treffen finden alle zwei Wochen statt. Die teilnehmenden Kinder  und Jugendlichen werden hierbei von Studenten und Mentoren aus technischen Bereichen betreut, während sie programmieren und unter kompetenter Anleitung ihre Fähigkeiten zu entwickeln und auszubauen. Alle in diesem Projekt mitwirkenden Mentoren engagieren sich ehrenamtlich und so sind die Treffen auch für alle Kinder kostenlos.</p>
             </div>
         </div>
     </div>
@@ -180,8 +168,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Termine</h2>
 
-                <p>Das nächste Treffen wird am Freitag den 25.09.2015 von 16:30 Uhr bis 18:30 Uhr im Seminarraum 236 der Fakultät für
-                    Informatik am KIT stattfinden.</p>
+                <p>Das nächste Treffen findet am Freitag, dem 25.09.2015 von 16.30 Uhr bis 18.30 Uhr im Seminarraum 236 der Fakultät für Informatik im Gebäude 50.34 am KIT statt.</p>
 
                 <p>Die unten aufgelisteten Termine finden alle im Gebäude 50.34 des KIT statt. Es gehört zur Fakultät für
                     Informatik, die uns den Seminarraum für unsere Treffen zur Verfügung stellt.</p>
@@ -272,7 +259,7 @@
                 <h2>Ist CoderDojo das Richtige für mein Kind?</h2>
 
                 <p>Am einfachsten lässt sich das herausfinden, indem Sie das mit Ihrem Kind einfach mal ausprobieren! Wir
-                    erheben keine Teilnehmergebühr, verlangen kein Abo oder ähnliches, und wenn Ihr Kind Spaß bei uns hat,
+                    erheben keine Teilnehmergebühr, und wenn Ihr Kind Spaß bei uns hat,
                     dann freuen wir uns, es wieder bei uns zu begrüßen!</p>
 
                 <h2>Für welche Altersgruppe ist CoderDojo geeignet?</h2>
