Kleiner rechtschreib/grammatikfehler behoben

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Hier findet ihr aktuelle Informationen zu unseren Treffen.</p>
 
                 <h2>Wie funktioniert's?</h2>
 
-                <p>Unsere Treffen finden alle zwei Wochen statt. Die teilnehmenden Kinder  und Jugendlichen werden hierbei von Studenten und Mentoren aus technischen Bereichen betreut, während sie programmieren und unter kompetenter Anleitung ihre Fähigkeiten zu entwickeln und auszubauen. Alle in diesem Projekt mitwirkenden Mentoren engagieren sich ehrenamtlich und so sind die Treffen auch für alle Kinder kostenlos.</p>
+                <p>Unsere Treffen finden alle zwei Wochen statt. Die teilnehmenden Kinder und Jugendlichen werden hierbei von Studenten und Mentoren aus technischen Bereichen betreut, während sie programmieren und unter kompetenter Anleitung ihre Fähigkeiten entwickeln und ausbauen. Alle in diesem Projekt mitwirkenden Mentoren engagieren sich ehrenamtlich und so sind die Treffen auch für alle Kinder kostenlos.</p>
             </div>
         </div>
     </div>
