Neue Quelle für Scratch Tutorials

--- a/material.html
+++ b/material.html
@@ -193,6 +193,7 @@
                     </li>
                     <li>Einfache Scratch-Projekte auf der
                         <a href="https://scratch.mit.edu/starter_projects/">Scratch-Webseite</a>
+					</li>
                 </ul>
                 </p>
                 <h3>Tutorials</h3>
@@ -212,13 +213,17 @@
 
                     <li>
                         Ein Tutorial über Scrolling wie bei Super Mario:
-                        <a href="https://scratch.mit.edu/projects/69082160/">https://scratch.mit.edu/projects/69082160/</a>
+                        <a href="https://scratch.mit.edu/projects/69082160/">Scrolling Tutorial auf der Scratch Webseite</a>
                     </li>
                     <li>
                         Eine Sammlung von Video-Tutorials im Aufbau:
                         <a href="https://www.youtube.com/channel/UCNc2uw7INArwMLD1AJ4oGnQ">"Der Scratch-Kanal" auf
                             YouTube</a>
                     </li>
+					<li>
+						Aufgaben verschiedener Schwierigkeitsstufen mit Anleitung:
+						<a href="http://www.it-for-kids.org/projects">IT4Kids</a>
+					</li>
                 </ul>
                 </p>
             </div>
