--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                 <li>
                     <a class="page-scroll" href="#join">Mitmachen</a>
                 </li>
+				<li>
+                    <a class="" href="raetsel.html">Rätsel</a>
+                </li>
                 <li class="visible-xs">
                     <a href="/material.html">Material</a>
                 </li>
