--- a/raetsel.html
+++ b/raetsel.html
@@ -65,7 +65,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                 <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">
+            <a class="navbar-brand page-scroll" href="index.html">
                 <img src="img/logo.png" alt="CoderDojo Karlsruhe Logo"
                      class="navbar-brand-logo"/> <span id="navbar-brand-name"><span
                     class="light">CoderDojo</span> Karlsruhe</span>
@@ -78,42 +78,7 @@
                 <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                 <li class="hidden">
                     <a href="#page-top"></a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#about">Info</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#events">Termine</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#faq">Fragen</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#join">Mitmachen</a>
-                </li>
-                <li class="visible-xs">
-                    <a href="/material.html">Material</a>
-                </li>
-                <li class="dropdown hidden-xs">
-                    <a class="dropdown-toggle" href="/material.html">Material</a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="/material.html#scratch">Scratch</a>
-                        </li>
-                        <li>
-                            <a href="/material.html#python">Python</a>
-                        </li>
-                        <li>
-                            <a href="/material.html#html">HTML</a>
-                        </li>
-                        <li>
-                            <a href="/material.html#java">Java</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#contact">Kontakt</a>
-                </li>
+                </li>               
             </ul>
         </div>
         <!-- /.navbar-collapse -->
