--- a/index.html
+++ b/index.html
@@ -183,21 +183,6 @@ Hier findet ihr aktuelle Informationen zu unseren Treffen.</p>
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">09</span>
-                                <span class="timeline-balloon-date-month">OKT</span>
-                            </div>
-                        </a>
-
-                        <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a href="#map"
-                                                                                                class="page-scroll">Seminarraum
-                            236</a></div>
-                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>15:30 - 18:30</div>
-                    </div>
-
-					
-                    <div class="row timeline-movement">
-                        <a class="page-scroll" href="#join">
-                            <div class="timeline-badge">
                                 <span class="timeline-balloon-date-day">23</span>
                                 <span class="timeline-balloon-date-month">OKT</span>
                             </div>
@@ -209,6 +194,21 @@ Hier findet ihr aktuelle Informationen zu unseren Treffen.</p>
                         <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>16:30 - 18:30</div>
                     </div>
 
+					
+                    <div class="row timeline-movement">
+                        <a class="page-scroll" href="#join">
+                            <div class="timeline-badge">
+                                <span class="timeline-balloon-date-day">06</span>
+                                <span class="timeline-balloon-date-month">NOV</span>
+                            </div>
+                        </a>
+
+                        <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a href="#map"
+                                                                                                class="page-scroll">Seminarraum
+                            236</a></div>
+                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>17:00 - 19:00</div>
+                    </div>
+
 					<div class="row timeline-movement">
                         <div class="timeline-badge timeline-filter-movement">
                             <span class="glyphicon glyphicon-time"></span>
@@ -218,7 +218,7 @@ Hier findet ihr aktuelle Informationen zu unseren Treffen.</p>
 					<div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">06</span>
+                                <span class="timeline-balloon-date-day">20</span>
                                 <span class="timeline-balloon-date-month">NOV</span>
                             </div>
                         </a>
@@ -232,8 +232,8 @@ Hier findet ihr aktuelle Informationen zu unseren Treffen.</p>
 					<div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">20</span>
-                                <span class="timeline-balloon-date-month">NOV</span>
+                                <span class="timeline-balloon-date-day">04</span>
+                                <span class="timeline-balloon-date-month">DEZ</span>
                             </div>
                         </a>
 
