--- a/index.html
+++ b/index.html
@@ -142,9 +142,32 @@ Hier findet ihr aktuelle Informationen zu unseren Treffen.</p>
     </div>
 </header>
 
+
 <!-- About Section -->
 <section id="about" class="content-section text-center">
     <div class="container">
+
+ 	<table id="news_container">
+		<tr>
+			<td>
+				<div class="triangle_box">
+					<div class="triangle_text">Nächstes Treffen</div>
+					<div class="triangle_right"></div>
+				</div>
+			</td>
+			<td>20. November</td>
+		</tr>
+		<tr>
+			<td>
+				<div class="triangle_box">
+					<div class="triangle_text">Neu</div>
+					<div class="triangle_right"></div>
+				</div>
+			</td>
+			<td><a href="raetsel.html">Das Rätsel der Woche</td>
+		</tr>
+	</table>
+
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Was ist ein CoderDojo?</h2>
@@ -466,8 +489,9 @@ Hier findet ihr aktuelle Informationen zu unseren Treffen.</p>
 <!-- Custom Theme JavaScript -->
 <script src="js/coderdojoka.js"></script>
 
-<!-- News ticker -->
+<!-- News ticker
 <script src="js/news_anim.js"></script>
+ -->
 
 <!-- Init Lightbox -->
 <script>
@@ -477,8 +501,8 @@ Hier findet ihr aktuelle Informationen zu unseren Treffen.</p>
         'fitImagesInViewport': true
     });
 
-	News.init(["Neu: das <a href='raetsel.html'>Rätsel der Woche</a>", "nächstes Treffen am 20.Nov"]);
-	News.animate();
+//	News.init(["Neu: das <a href='raetsel.html'>Rätsel der Woche</a>", "nächstes Treffen am 20.Nov"]);
+//  News.animate();
 </script>
 
 
