--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					<div class="triangle_right"></div>
 				</div>
 			</td>
-			<td><a href="raetsel.html">Das Rätsel der Woche</td>
+			<td><a href="raetsel.html">Rätsel der Woche</td>
 		</tr>
 	</table>
 
