--- a/material.html
+++ b/material.html
@@ -179,6 +179,9 @@
                     es muss nichts installiert werden.
                 </p>
 
+
+                <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/63674944/?autostart=false" frameborder="0" allowfullscreen="true"></iframe>
+
                 <h3>Nützliche links</h3>
 
                 <p>
