--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <tr>
                         <td>
                             <div class="triangle_box">
-                                <div class="triangle_text">Neu</div>
+                                <div class="triangle_text">neu</div>
                                 <div class="triangle_right"></div>
                             </div>
                         </td>
@@ -194,7 +194,7 @@
                     programmieren zu lernen und sie in diesem Bereich zu fördern. </p>
                 <a href="img/codo/bild_1.jpg" data-lightbox="codo-bilder"
                    data-title="Mit zweiter Tastatur gehts besser!">
-                    <img class="img-thumbnail rechts_400" src="img/codo/bild_1.jpg" alt=""/>
+                    <img class="img-thumbnail img-responsive rechts_400" src="img/codo/bild_1.jpg" alt=""/>
                 </a>
 
                 <h2>Wie funktioniert's?</h2>
