--- a/raetsel.html
+++ b/raetsel.html
@@ -24,6 +24,8 @@
 
     <!-- Custom CSS -->
     <link href="css/coderdojoka.css" rel="stylesheet">
+    <link href="css/puzzle.css" rel="stylesheet">
+
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
